Updated to kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ encoding: utf-8
 
 # other settings
 highlighter: rouge
-markdown: redcarpet
+markdown: kramdown
 kramdown:
   input: GFM
   syntax_highlighter: rouge
