--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,12 +1,15 @@
 - name: Learning Hierarchical Structures On-The-Fly with a Recurrent-Recursive Model for Sequences
+  url: http://aclweb.org/anthology/W18-3020
   desc: <b>Athul Paul Jacob<sup>*</sup> </b>, Zhouhan Lin<sup>*</sup>, Alessandro Sordoni, Yoshua Bengio
   img: /static/assets/img/landing/RRNet.jpg
 
 - name: Straight to the Tree - Constituency Parsing with Neural Syntactic Distance
+  url: http://aclweb.org/anthology/P18-1108
   desc: Yikang Shen<sup>*</sup>, Zhouhan Lin<sup>*</sup>, <b>Athul Paul Jacob</b>, Alessandro Sordoni, Aaron Courville, Yoshua Bengio
   img: /static/assets/img/landing/STT.jpg
 
 - name: Boundary-seeking GANs - A new method for adversarial generation of discrete data
+  url: https://www.microsoft.com/en-us/research/blog/boundary-seeking-gans-new-method-adversarial-generation-discrete-data/
   desc: Devon R Hjelm<sup>*</sup>, <b>Athul Paul Jacob<sup>*</sup></b>
   img: /static/assets/img/landing/BGAN-blog.jpg
 
