--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   skill_icon2:
     - name: icon-shell
     - name: icon-cplusplus
-  desc: I am a senior undergraduate at the University Of Waterloo pursuing Computer Science, Combinatorics and Optimization as well as a visiting researcher at MILA. I am currently a Research Intern at Facebook AI Research NY. I am privileged to be supervised by Prof. Yoshua Bengio, Prof. Pascal Poupart, Prof. Kyunghyun Cho and Dr. Alessandro Sordoni. The focus of my research is primarily on generative models and NLP.
+  desc: I am a senior undergraduate at the University Of Waterloo pursuing Computer Science, Combinatorics and Optimization as well as a visiting researcher at MILA. I am currently a Research Intern at Facebook AI Research NY. I am supervised by Prof. Yoshua Bengio, Prof. Pascal Poupart, Prof. Kyunghyun Cho and Dr. Alessandro Sordoni. The focus of my research is primarily on generative models and NLP.
 
 # comment
 # disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
